# SimpleCPUBenchmark

./: LICENSE  README.md  main.c
BenchMark/: .gitignore  BenchMark.sln  CMakeLists.txt  client.c  main.c  server.c
BenchMark-linux/: CMakeLists.txt  main.c
BenchMark/BenchMark/: BenchMark.cpp  BenchMark.vcxproj  BenchMark.vcxproj.filters
BenchMark/benchmark/: benchmark.c  benchmark.h
BenchMark/cpu_info/: cpu_info.c  cpu_info.h
BenchMark/network/: client.c  client.h  network.c  network.h  server.c  server.h
BenchMark/results/: results.c  results.h
